src/test/deca/context/invalid/resultats/test1_bool_print2-cont.res
./src/test/deca/context/invalid/test1_bool_print2.deca:16:1: Cannot print anything that is not an int, a float or a string.
